--- a/index.html
+++ b/index.html
@@ -1,77 +1,14 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Anime music with a human presenter</title>
-        <!-- Use Bootstrap for column layout -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css" />
+        <meta charset="utf-8">
+        <meta http-equiv="refresh" content="0;url=https://nekodesu.radio" />
+        <link rel="canonical" href="https://nekodesu.radio" />
     </head>
     <body>
-        <div class="container-fluid">
-            <!-- Langauge Bar -->
-            <div id ="lang" class="row">
-                <div class="col-sm-12">
-                    <div class="lang">
-                        English | <a href="index_jp.html">日本語</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Heading -->
-            <div id="heading" class="row">
-                <div class="col-lg-12">
-                    <h1 class="heading-text">Neko Desu</h1>
-                    <h4 class="text-white">With Peter Shillito</h4>
-                    <h2 class="text-white">Anime Music with a Human Presenter</h2>
-                </div>
-            </div>
-            <!-- Main Links -->
-            <div id="links" class="row body-padding">      
-                <div class="col-md-4 link-panel">
-                    <h3>Request a Song<h3>
-                    <a class="weblink" href="https://nkd.su">nkd.su</a>
-                </div>
-                <div class="col-md-4 link-panel">
-                    <h3>Listen to the Show</h3>
-                    <a class="weblink" href="http://thisisthecat.com">The Cat</a>
-                    <p>Saturdays, 9pm-11pm GMT/BST
-                    <br>107.9FM (Crewe and Nantwich)</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>Listen Again</h3>
-                    <a class="weblink" href="http://www.mixcloud.com/NekoDesu/">Mixcloud</a>
-                </div>
-            </div>
-            <!-- Social -->
-            <div class="row body-padding">
-                <div class="col-md-12">
-                    <h2>Get Social</h2>
-                </div>
-            </div>
-            <div class="row social">
-                <div class="col-md-4 social-link">
-                    Follow the show:<br /><img src="twitter.svg" width="16px" />
-                    <a href="https://twitter.com/NekoDesuRadio">@NekoDesuRadio</a>
-                </div>
-                <div class="col-md-4 social-link">
-                    Follow the host:<br />
-                    <img src="twitter.svg" width="16px" />&nbsp;<a href="https://twitter.com/theshillito">@theshillito</a>&nbsp; 
-                    <img src="kirakiratter.svg" width="20px" />&nbsp;<a href="https://kirakiratter.com/@theshillito">@theshillito</a>
-                </div>
-                <div class="col-md-4">
-                    Follow the conversation:<br />
-                    <img src="twitter.svg" width="16px" />
-                    <a href="https://twitter.com/hashtag/NekoDesu?src=hash">#NekoDesu</a>
-                </div>
-            </div>
-            <!-- Charity -->
-            <div class="row body-padding">
-                <div class="col-lg-12">
-                    <h3>Download Peter's Charity Anime Music EP</h3> 
-                    <a class="weblink" href="http://desus.bandcamp.com/album/take-back-love-city">Take Back Love City</a>
-                </div>
-            </div> 
-        </div>
+        <h1>
+            The page been moved to <a href="https://nekodesu.radio">nekodesu.radio</a>
+        </h1>
     </body>
 </html>
+
